# subnetra-studio

./: .gitmodules  Cargo.toml  README.md  build-web.ps1  config.json  rust-toolchain.toml  test_config.json
.cargo/: config.toml
core-lib/: Cargo.toml
core-lib/src/config/: mod.rs
docs/: project.json
web-server/: Cargo.toml
web-server/public/: index.html
web-server/src/: init.rs  main.rs
web-server/src/api/: mod.rs
web-server/src/engine/: mod.rs  uds_client.rs
win-client/: Cargo.toml
win-client/src/: main.rs
win-client/ui/: main.slint
