[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
core-lib = { version = "0.1.0", path = "../core-lib" }
salvo = { version = "0.93.0", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "process"] }
tracing-subscriber = "0.3.23"
