[package]
name = "web-server"
version = "0.1.5"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
core-lib = { version = "0.1.0", path = "../core-lib" }
rand = "0.10.1"
rand_core = "0.10.1"
salvo = { version = "0.63.0", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "process"] }
tracing-subscriber = "0.3.23"
