[package]
name = "win-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "=1.2.0"
core-lib = { path = "../core-lib" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
slint-build = "=1.2.0"
